--- a/argentbankapp/src/assets/css/main.css
+++ b/argentbankapp/src/assets/css/main.css
@@ -75,6 +75,22 @@ body {
     max-width: 100%;
     width: 200px;
 }
+.navbar {
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+.nav-btn {
+    display: block;
+    align-self: center;
+    justify-self: center;
+    margin: 5px;
+    width: 25px;
+    height: 25px;
+}
 
 .hero {
     background-image: url('../img/bank-tree.jpeg');
@@ -207,6 +223,9 @@ body {
     padding: 5px;
     font-size: 1.2rem;
 }
+input:disabled {
+    color: black;
+}
 
 .footer {
     display: flex;
@@ -265,9 +284,27 @@ body {
     padding: 10px;
 }
 
-.header {
+.user-header {
+    display: flex;
+    flex-direction: column;
     color: #fff;
     margin-bottom: 2rem;
+    justify-content: center;
+    align-items: center;
+}
+.user-header h1 {
+    display: flex;
+    flex-direction: column;
+}
+.user-edit-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+}
+.collapsed {
+    display: none;
 }
 
 .transaction-button {
